<resources>
    <string name="app_name">App Market</string>

    <string name="default_web_client_id">435194963705-601qhduuf6sc4u1tap867qudrrudmo77.apps.googleusercontent.com</string>
    <string name="my_google_maps_api_key">AIzaSyDduBq7IHJPacQ1Y4Q9tQzGXS2lwdQ8daA</string>

    <string name="item_home">Home</string>
    <string name="item_sell">Sell</string>
    <string name="item_chats">Chats</string>
    <string name="item_ads">My Ads</string>
    <string name="item_account">Account</string>

    <string name="titleRL">Title</string>
    <string name="email">Login With Email</string>
    <string name="google">Login With Google</string>

    <string name="txtLogin">Login With User</string>
    <string name="editTextEmail">Email</string>
    <string name="editTextPassword">Password</string>
    <string name="btnSignIn">Sign In</string>

    <string name="txtNotAccount">You do not have an account?</string>
    <string name="txtSigUp">Sign Up</string>

    <string name="txtRegister">Register Of User</string>
    <string name="editTextRepeatPassword">Repeat Password</string>
    <string name="btnRegister">Register</string>

    <string name="txtProfile">User Profile</string>
    <string name="txtInformation">Information:</string>
    <string name="txtName">Name:</string>
    <string name="textViewNames">Complete Names:</string>
    <string name="txtEmail">Email: </string>
    <string name="textViewEmail">example@example.com</string>
    <string name="txtBirthday">Birthday</string>
    <string name="textViewBirthday">dd/mm/aaaa</string>
    <string name="txtMemberSince">Member Since:</string>
    <string name="textViewMemberSince">dd/mm/aaaa</string>
    <string name="txtPhone">Phone:</string>
    <string name="textViewPhone">000-000-0000</string>
    <string name="txtAccountStatus">Account Status:</string>
    <string name="textViewAccountStatus">Not Verified</string>

    <string name="txtOptions">Options</string>
    <string name="btnEditProfile">Edit Profile</string>
    <string name="btnSignOff">Sign Off</string>

    <!--Edit Profile-->
    <string name="txtEditProfile">Edit Profile</string>
    <string name="editTextNames">Names</string>
    <string name="editTextBirthday">Birthday</string>
    <string name="phoneCode">+00</string>
    <string name="editTextPhone">Phone</string>
    <string name="btnEdit">Edit</string>

    <!--Create ADS-->
    <string name="editTextBrand">Brand</string>
    <string name="category">Category</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="editTextPrice">Price</string>
    <string name="editTextTitle">Title</string>
    <string name="editTextDescription">Description</string>
    <string name="btnCreateAds">Create ADS</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>