<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ads.CreateAdsActivity">

    <RelativeLayout
        android:id="@+id/relativeLayoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/addImage"
            android:src="@drawable/agregar_img"
            android:layout_marginTop="15dp"
            android:layout_centerInParent="true"
            android:layout_width="100dp"
            android:layout_height="100dp" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@+id/relativeLayoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/relativeLayoutImages"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                android:layout_width="match_parent"
                tools:listitem="@layout/items_images"
                app:spanCount="4"
                android:layout_height="wrap_content" />

            <!--Brand-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleBrand"
                android:layout_below="@+id/relativeLayoutImages"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextBrand"
                    android:hint="@string/editTextBrand"
                    android:inputType="textPersonName|textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </com.google.android.material.textfield.TextInputLayout>

            <!--Category-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleCategory"
                android:layout_below="@+id/titleBrand"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleCategory"
                    android:hint="@string/category"
                    android:inputType="textPersonName|textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </com.google.android.material.textfield.TextInputLayout>

            <!--Condition-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleCondition"
                android:layout_below="@+id/titleCategory"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/autocompleteCondition"
                    android:hint="@string/condition"
                    android:inputType="textPersonName|textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </com.google.android.material.textfield.TextInputLayout>

            <!--Price-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titlePrice"
                android:layout_below="@+id/titleCondition"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextPrice"
                    android:hint="@string/editTextPrice"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </com.google.android.material.textfield.TextInputLayout>

            <!--Title-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title"
                android:layout_below="@+id/titlePrice"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextTitle"
                    android:hint="@string/editTextTitle"
                    android:inputType="textPersonName|textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </com.google.android.material.textfield.TextInputLayout>

            <!--Description-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description"
                android:layout_below="@+id/title"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextDescription"
                    android:hint="@string/editTextDescription"
                    android:minHeight="100dp"
                    android:inputType="textMultiLine|textCapSentences"
                    android:gravity="top|start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateAds"
        android:text="@string/btnCreateAds"
        android:layout_alignParentBottom="true"
        android:textAllCaps="true"
        android:layout_margin="10dp"
        app:cornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>